--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dhanush- Frontend Developer</title>
+    <title>Feature Integration Project</title>
+    <meta charset="UTF-8">
+    <style>
+        body { font-family: Arial, sans-serif; padding: 20px; }
+        section { margin-bottom: 40px; }
+        form input, form textarea { display: block; margin-bottom: 10px; width: 300px; }
+        form button { padding: 8px 16px; }
+    </style>
 </head>
 <body>
-    <h1>Dhanush</h1>
-    <h2>Frontend Developer</h2>
-    <p>I am a Frontend Developer joining a new team and excited to contribute to modern web projects.</p>
+    <section id="about">
+        <h2>About</h2>
+        <p>This is the About section describing the project. Here you can include details about what the project does and any other relevant information.</p>
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <form>
+            <input type="text" placeholder="Name" required>
+            <input type="email" placeholder="Email" required>
+            <textarea placeholder="Message" required></textarea>
+            <button type="submit">Send</button>
+        </form>
+    </section>
 </body>
 </html>
